# Payroll-Indonesia

./: .gitignore  .txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-ci.yml
docs/: custom_salary_slip.md  defaults.md  pajak_pada_salary_component_payroll_indonesia.md  payroll_indonesia_settings.md  perpajakan_payroll_indonesia.md  salary_component_mapping.md  tax_effects.md  ter_monthly_calculation.md
payroll_indonesia/: __init__.py  api.py  config.py  constants.py  frappe_helpers.py  hooks.py  install.py  modules.txt  patches.txt  server_methods.py  test_settings_migration.py  test_setup_module.py  test_tax_slabs.py  utils.py  validations.py
payroll_indonesia/config/: __init__.py  config.py  defaults.json  desktop.py  gl_account_mapper.py  gl_mapper_core.py  pph21_progressive.py  pph21_ter.py  pph21_ter_december.py
payroll_indonesia/fixtures/: client_script.json  custom_field.json  custom_fields.json  income_tax_slab.json  payslipprintformat.json  property_setter.json  salary_component.json  salary_component_account.json  setup.py  workspace.json
payroll_indonesia/override/: __init__.py  employee.py  payroll_entry.py  payroll_entry_functions.py  salary_slip.py  salary_slip_functions.py  salary_structure.py
payroll_indonesia/patches/: expense_account_prefix_setting.py
payroll_indonesia/payroll_indonesia/: utils.py  validations.py
scripts/: audit_defaults.py  debug_pph21_route.py  install_dependencies.sh
tests/: test_salary_slip_formula.py
(+193 files in other folders)
