[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "payroll_indonesia"
authors = [{name = "IMOGI", email = "hello@imogi.tech"}]
description = "Payroll Indonesia - Modul Perhitungan BPJS & PPh 21 untuk ERPNext Indonesia"
requires-python = ">=3.10"
readme = "README.md"
version = "1.0.0"
dependencies = [
    "frappe>=15.0.0",
    "erpnext>=15.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit"
]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest.ini_options]
testpaths = ["payroll_indonesia"]